# DetFace

./: .gitignore  .replit  DETFACE.spec  LICENSE  README.md  UPLOAD_GITHUB.md  build_exe.py  config.json  dependencies.txt  desktop_app.py  face_detector.py  main.py  package_app.py  pyproject.toml  replit.md  run_desktop.py  users.json  windows_package.py
DETFACE_Portable_linux/: DETFACE.sh  README.txt  detface_desktop.py  instalar_dependencias.sh  registro_presenca.csv  report_generator.py  requirements.txt
DETFACE_Portable_linux/faces/: .gitkeep
DETFACE_Portable_linux/templates/: camera.html
DETFACE_Windows/: DETFACE.bat  DETFACE.ps1  README.txt  instalar_dependencias.bat  main.py  requirements.txt  user_manager.py  web_camera.py
DETFACE_Windows/logs/: .gitkeep
backup/: .gitkeep
reports/: .gitkeep
