[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "reportlab>=4.4.2",
    "openpyxl>=3.1.0",
    "scikit-learn>=1.3.0",
    "flask>=3.1.1",
]
